@@ -14,15 +14,13 @@
         <remote.type>browserstack</remote.type>
         <domain>https://jdi-testing.github.io/jdi-light/</domain>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <aspectj.version>1.9.7</aspectj.version>
-        <allure.testng>2.19.0</allure.testng>
-        <allure.maven>2.11.2</allure.maven>
-        <jetty.version>9.4.12.RC2</jetty.version>
-<!--        <jdi.version>1.4.5</jdi.version>-->
-        <log4j2.version>2.17.1</log4j2.version>
         <USERNAME>kirillpoltorykhi_D3ILCJ</USERNAME>
         <ACCESS_KEY>KJpfnFzGy7rM64zpmueU</ACCESS_KEY>
         <aspectj.args></aspectj.args>
+        <aspectj.version>1.9.20</aspectj.version>
+        <allure.testng>2.23.0</allure.testng>
+        <allure.maven>2.12.0</allure.maven>
+        <jetty.version>9.4.12.RC2</jetty.version>
     </properties>
 
     <profiles>
@@ -33,6 +31,15 @@
             </activation>
             <properties>
                 <remote.type>selenoid</remote.type>
+            </properties>
+        </profile>
+        <profile>
+            <id>jdk16</id>
+            <activation>
+                <jdk>[16, 20]</jdk>
+            </activation>
+            <properties>
+                <aspectj.args>--add-opens java.base/java.lang=ALL-UNNAMED</aspectj.args>
             </properties>
         </profile>
     </profiles>
@@ -85,8 +92,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
             <!--Allure reporting config in parent-->
